fixing code inspection issues
Signed-off-by: MohabMohie <Mohab.MohieElDeen@outlook.com>